Fix typos, use MathUtil from core package, use enum for Interpolation